--- a/requirements.txt
+++ b/requirements.txt
@@ -11,20 +11,21 @@ constantly==15.1.0
 cryptography==35.0.0
 daphne==3.0.2
 Django==3.2.7
+djongo==1.3.6
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
 msgpack==1.0.2
-pkg_resources==0.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pymongo==3.12.1
 pyOpenSSL==21.0.0
 pytz==2021.3
 service-identity==21.1.0
 six==1.16.0
-sqlparse==0.4.2
+sqlparse==0.2.4
 Twisted==21.7.0
 txaio==21.2.1
 typing-extensions==3.10.0.2
