--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==3.0.1
 attrs==21.2.0
 autobahn==21.3.1
 Automat==20.2.0
+binance==0.3
 cffi==1.15.0
 channels==3.0.4
 channels-redis==3.3.1
@@ -11,17 +12,22 @@ constantly==15.1.0
 cryptography==35.0.0
 daphne==3.0.2
 Django==3.2.7
+django-environ==0.8.1
 djongo==1.3.6
+environ==1.0
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
 msgpack==1.0.2
+numpy==1.21.3
+pandas==1.3.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pymongo==3.12.1
 pyOpenSSL==21.0.0
+python-dateutil==2.8.2
 pytz==2021.3
 service-identity==21.1.0
 six==1.16.0
